--- a/overrides/main.html
+++ b/overrides/main.html
@@ -32,7 +32,7 @@
   <meta property="og:title" content="{{ title }}" />
   <meta property="og:description" content="{{ config.site_description }}" />
   <meta property="og:url" content="{{ page.canonical_url }}" />
-  <meta property="og:image" content="https://tutorial.xn--mgbg4a8cpdl.com/img/link-preview-artutorial.jpeg"/>
+  <meta property="og:image" content="https://cdn.xn--mgbg4a8cpdl.com/link-preview-artutorial.jpeg"/>
   <meta property="og:image:type" content="image/jpg" />
   <meta property="og:image:width" content="1920" />
   <meta property="og:image:height" content="1310" />
@@ -48,5 +48,5 @@
   <meta name="twitter:creator" content="@arhackintosh" />
   <meta name="twitter:title" content="{{ title }}" />
   <meta name="twitter:description" content="{{ config.site_description }}" />
-  <meta name="twitter:image" content="https://tutorial.xn--mgbg4a8cpdl.com/img/link-preview-artutorial.jpeg" />
+  <meta name="twitter:image" content="https://cdn.xn--mgbg4a8cpdl.com/link-preview-artutorial.jpeg" />
 {% endblock %}
